--- a/index.html
+++ b/index.html
@@ -5,34 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <h1>JS Calculator</h1>
-
     <div class="calc">
-        <p class="top-display"></p>
-        <h2 class="display"></h2>
-        <form class="calc-form" action="">
-            <button class="num" value="1">1</button>
-            <button class="num" value="2">2</button>
-            <button class="num" value="3">3</button>
-            <button class="num" value="4">4</button>
-            <button class="num" value="5">5</button>
-            <button class="num" value="6">6</button>
-            <button class="num" value="7">7</button>
-            <button class="num" value="8">8</button>
-            <button class="num" value="9">9</button>
-            <button class="num" value="0">0</button>
-            <button class="point" value=".">.</button>
-            <button class="plus" value="+">+</button>
-            <button class="minus" value="-">-</button>
-            <button class="divide" value="/">/</button>
-            <button class="times" value="x">x</button>
-            <button class="clear">Clear</button>
-            <button class="del">Del</button>
-            <button class="equals" value="=">=</button>
-        </form>
+        <div class="screen">
+            <p class="top-display"></p><h2 class="display"></h2>
+        </div>
+        <div class="keypad">
+            <form class="calc-form" action="">
+                <button class="num" value="1">1</button>
+                <button class="num" value="2">2</button>
+                <button class="num" value="3">3</button>
+                <button class="num" value="4">4</button>
+                <button class="num" value="5">5</button>
+                <button class="num" value="6">6</button>
+                <button class="num" value="7">7</button>
+                <button class="num" value="8">8</button>
+                <button class="num" value="9">9</button>
+                <button class="num" value="0">0</button>
+                <button class="point" value=".">.</button>
+                <button class="op" value="+">+</button>
+                <button class="op" value="-">-</button>
+                <button class="op" value="/">/</button>
+                <button class="op" value="x">x</button>
+                <button class="clear">Clear</button>
+                <button class="del">Del</button>
+                <button class="equals" value="=">=</button>
+            </form>
+        </div>
+        
     </div>
 
 
