--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1>JS Calculator</h1>
     <div class="calc">
         <div class="screen">
             <p class="top-display"></p><h2 class="display"></h2>
@@ -27,13 +26,13 @@
                 <button class="num" value="7">7</button>
                 <button class="num" value="8">8</button>
                 <button class="num" value="9">9</button>
-                <button class="num" value="0">0</button>
                 <button class="point" value=".">.</button>
+                <button class="zero" value="0">0</button>
                 <button class="op" value="+">+</button>
                 <button class="op" value="-">-</button>
                 <button class="op" value="/">/</button>
                 <button class="op" value="x">x</button>
-                <button class="clear">Clear</button>
+                <button class="clear">AC</button>
                 <button class="del">Del</button>
                 <button class="equals" value="=">=</button>
             </form>
