--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                 <button class="num" value="7">7</button>
                 <button class="num" value="8">8</button>
                 <button class="num" value="9">9</button>
-                <button class="point" value=".">.</button>
+                <button class="point op" value=".">.</button>
                 <button class="zero" value="0">0</button>
                 <button class="op" value="+">+</button>
                 <button class="op" value="-">-</button>
                 <button class="op" value="/">/</button>
                 <button class="op" value="x">x</button>
-                <button class="clear">AC</button>
-                <button class="del">Del</button>
-                <button class="equals" value="=">=</button>
+                <button class="clear sp">AC</button>
+                <button class="del sp">Del</button>
+                <button class="equals sp" value="=">=</button>
             </form>
         </div>
         
