--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button class="num" value="7">7</button>
                 <button class="num" value="8">8</button>
                 <button class="num" value="9">9</button>
-                <button class="point op" value=".">.</button>
+                <button class="point" value=".">.</button>
                 <button class="zero" value="0">0</button>
                 <button class="op" value="+">+</button>
                 <button class="op" value="-">-</button>
